<resources>
    <string name="app_name">Chatting</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Add_Image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="user_name">User Name</string>
    <string name="online">Online</string>
</resources>