<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textStyle="bold"
            android:text="Welcome Back !"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textStyle="bold"
            android:text="Welcome Back !"
            android:gravity="center"
            android:textSize="13dp"
            android:textColor="#A58C8C"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/background_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>
        <EditText
            android:id="@+id/inputPass"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/background_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <FrameLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:text="@string/sing_up"
                android:textStyle="bold"
                app:cornerRadius="10dp"

                />
            <ProgressBar
                android:id="@+id/progress"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>