<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.ChatActivity">

    <TextView
        android:id="@+id/tvIsAv"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupport"
        android:text="@string/online"
        android:gravity="center"
        android:visibility="visible"
        android:textSize="10sp"
        android:textColor="@color/black"
        />
    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_content_top"
        app:layout_constraintBottom_toTopOf="@id/inputMessage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/viewSupport"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewSupport"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/icBack"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="20dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewSupport"
        app:stackFromEnd="true" />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/icBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_info"
        android:tint="@color/white"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_back"
        android:padding="6dp"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/layoutSend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sendMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_send"
            android:tint="@color/white"
            android:layout_marginLeft="4dp"
            android:padding="8dp"
            />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/layoutSendImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sendImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_image"
            android:tint="@color/white"
            android:layout_marginLeft="4dp"
            android:padding="8dp"
            />
    </FrameLayout>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        android:hint="@string/type_a_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layoutSend"
        app:layout_constraintStart_toEndOf="@+id/layoutSendImage" />


</androidx.constraintlayout.widget.ConstraintLayout>